dev-eks-k8s/payments/3-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: payments-canary
  namespace: demo
spec:
  ports:
  - port: 3005
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: payments

---
apiVersion: v1
kind: Service
metadata:
  name: payments-stable
  namespace: demo

spec:
  ports:
  - port: 3005
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: payments
